# alvum

./: .gitignore  AGENTS.md  Cargo.toml  README.md
app/: .gitignore  distribution-entitlements.plist  main.js  package-lock.json  package.json  popover-preload.js  popover.html  tsconfig.renderer.json
app/assets/: icon.icns
app/main/: briefing-service.js  capture-service.js  cli-runner.js  connector-service.js  ipc.js  notifications.js  provider-service.js  runtime.js  shell-log.js  speaker-service.js  synthesis-scheduler.js  tail.js  tray-popover.js  update-service.js
app/main/briefing/: artifacts.js  calendar.js  dates.js  decision-graph.js  markdown.js  run-store.js  watchers.js
app/src/renderer/: app.ts
app/src/renderer/api/: alvum-api.ts  types.ts
app/src/renderer/features/: capture.ts  connectors.ts  logs.ts  profile.ts  providers.ts  synthesis.ts
app/src/renderer/features/voices/: assignment-model.ts  filter-model.ts  gate-model.ts  index.ts  playback-model.ts  (+4 more)
app/src/renderer/mock/: alvum.ts
app/src/renderer/shared/: dom.ts  voices.ts
app/src/renderer/shell/: contracts.ts  feature-module.ts
app/src/renderer/styles/: popover.css  voices.css
app/tests/: popover-connectors.test.js  renderer-voices.test.js  signing-scripts.test.js  speaker-service.test.js
crates/alvum-capture-audio/: Cargo.toml  build.rs
crates/alvum-capture-audio/examples/: sck_spike.rs
crates/alvum-capture-audio/src/: capture.rs  coreaudio_hal.rs  devices.rs  encoder.rs  lib.rs  mic_selection.rs  recorder.rs  sck.rs  sck_decode.rs  source.rs  vad.rs
crates/alvum-capture-audio/tests/: record_integration.rs
crates/alvum-capture-sck/: Cargo.toml
crates/alvum-capture-sck/src/: audio.rs  display_watcher.rs  filter.rs  helpers.rs  lib.rs  screen.rs  stream.rs
crates/alvum-capture-screen/: Cargo.toml
crates/alvum-capture-screen/src/: daemon.rs  lib.rs  sck.rs  screenshot.rs  source.rs  trigger.rs  writer.rs
crates/alvum-cli/: Cargo.toml  Info.plist  build.rs
crates/alvum-cli/src/: capture.rs  cli.rs  config_cmd.rs  config_doc.rs  extensions.rs  extract.rs  main.rs  models.rs  profile.rs  providers.rs  speakers.rs  tail.rs
crates/alvum-cli/src/extensions/: connectors.rs
crates/alvum-cli/src/providers/: capabilities.rs
crates/alvum-cli/tests/: extensions.rs
crates/alvum-connector-audio/: Cargo.toml
crates/alvum-connector-audio/src/: lib.rs  processor.rs
crates/alvum-connector-audio/tests/: processor_modes.rs
crates/alvum-connector-claude/: Cargo.toml
crates/alvum-connector-claude/src/: connector.rs  lib.rs  parser.rs
crates/alvum-connector-codex/: Cargo.toml
crates/alvum-connector-codex/src/: connector.rs  lib.rs  parser.rs
crates/alvum-connector-external/: Cargo.toml
crates/alvum-connector-external/src/: analysis.rs  client.rs  connector.rs  lib.rs  registry.rs
crates/alvum-connector-screen/: Cargo.toml
crates/alvum-connector-screen/src/: lib.rs  processor.rs
crates/alvum-connector-session/: Cargo.toml
crates/alvum-connector-session/src/: lib.rs
crates/alvum-core/: Cargo.toml
crates/alvum-core/src/: artifact.rs  builtin_components.rs  capture.rs  config.rs  connector.rs  data_ref.rs  decision.rs  extension.rs  keychain.rs  lib.rs  llm.rs  observation.rs  pipeline_events.rs  processor.rs  progress.rs  storage.rs  synthesis_profile.rs  util.rs
crates/alvum-episode/: Cargo.toml
crates/alvum-episode/src/: lib.rs  threading.rs  time_block.rs  types.rs
crates/alvum-knowledge/: Cargo.toml
crates/alvum-knowledge/src/: extract.rs  lib.rs  store.rs  types.rs
crates/alvum-pipeline/: Cargo.toml
crates/alvum-pipeline/src/: bedrock.rs  briefing.rs  causal.rs  distill.rs  extract.rs  lib.rs  llm.rs  local_time.rs  processed_index.rs  processor_runner.rs  progress.rs  util.rs
crates/alvum-pipeline/src/tree/: artifacts.rs  blocks.rs  cluster.rs  day.rs  domain.rs  level.rs  mod.rs  profile.rs  repair.rs  thread.rs
crates/alvum-pipeline/tests/: idempotency.rs
crates/alvum-processor-audio/: Cargo.toml
crates/alvum-processor-audio/src/: decoder.rs  fingerprint.rs  lib.rs  openai.rs  pyannote.rs  speaker_registry.rs  transcriber.rs  voice.rs
crates/alvum-processor-audio/src/speaker_registry/: matching.rs  thresholds.rs  voice_model.rs
crates/alvum-processor-audio/tests/: voice_intelligence.rs
crates/alvum-processor-screen/: Cargo.toml
crates/alvum-processor-screen/src/: describe.rs  lib.rs  ocr.rs
crates/alvum-processor-screen/tests/: native_ocr.rs
docs/superpowers/plans/: 2026-04-03-capture-daemon.md  2026-04-03-mvp-decision-extractor.md  2026-04-11-audio-capture.md  2026-04-12-capture-orchestration.md  2026-04-12-connector-refactor.md  2026-04-12-episodic-alignment.md  2026-04-12-screen-capture.md  2026-04-18-alignment-primitives.md  2026-04-18-pmf-path.md  2026-04-18-pmf-runbook.md  2026-04-18-top-level-spec-progress-matrix.md  2026-04-19-screencapturekit-migration.md  2026-04-20-audio-fixes.md  2026-04-20-briefing-fixes.md  2026-04-24-capture-processor-bolster.md
docs/superpowers/specs/: 2026-04-03-alvum-system-design.md  2026-04-12-actor-attribution.md  2026-04-12-capture-orchestration.md  2026-04-12-episodic-alignment.md  2026-04-12-screen-capture.md  2026-04-18-agency-layer.md  2026-04-18-device-fleet.md  2026-04-18-health-connector.md  2026-04-18-location-map.md  2026-04-18-storage-layout.md  2026-04-19-screencapturekit-migration.md  2026-04-28-component-extension-runtime.md  2026-04-28-platform-provider-briefing-gap-audit.md
launchd/: com.alvum.briefing.plist  com.alvum.capture.plist
patches/silero-vad-rust/: .cargo_vcs_info.json  Cargo.toml  LICENSE  README.md
patches/silero-vad-rust/src/: lib.rs
patches/silero-vad-rust/src/silero_vad/: mod.rs  model.rs  utils_vad.rs
patches/silero-vad-rust/tests/: test_basic.rs
scripts/: briefing.sh  build-deploy.sh  capture.sh  distribute-macos.sh  download-whisper-model.sh  email.sh  fix-permissions.sh  install.sh  lib.sh  menu-bar-install.sh  menu-bar-uninstall.sh  menu-bar.sh  sign-app.sh  sign-binary.sh  signing.sh  status.sh  uninstall.sh  view.sh  wake-scheduler.sh
(+1 files in other folders)
