[workspace]
resolver = "2"
members = [
    "crates/alvum-core",
    "crates/alvum-connector-claude",
    "crates/alvum-pipeline",
    "crates/alvum-cli",
    "crates/alvum-capture-audio",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
