[workspace]
resolver = "2"
members = [
    "crates/alvum-core",
    "crates/alvum-connector-audio",
    "crates/alvum-connector-claude",
    "crates/alvum-pipeline",
    "crates/alvum-cli",
    "crates/alvum-capture-audio",
    "crates/alvum-capture-screen",
    "crates/alvum-processor-audio",
    "crates/alvum-episode",
    "crates/alvum-knowledge",
    "crates/alvum-processor-screen",
    "crates/alvum-connector-screen",
]

# Patch silero-vad-rust to remove ort's load-dynamic feature.
# Upstream silero-vad-rust forces ort/load-dynamic, which makes ort try to
# dlopen libonnxruntime.dylib at runtime instead of statically linking. The
# downloaded ort binaries only include a static .a, so load-dynamic always
# fails after cargo install. This local patch removes that feature so ort
# links statically and the binary is self-contained.
[patch.crates-io]
silero-vad-rust = { path = "patches/silero-vad-rust" }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
