[workspace]
resolver = "2"
members = [
    "crates/alvum-core",
    "crates/alvum-connector-audio",
    "crates/alvum-connector-claude",
    "crates/alvum-connector-codex",
    "crates/alvum-connector-session",
    "crates/alvum-pipeline",
    "crates/alvum-cli",
    "crates/alvum-capture-audio",
    "crates/alvum-capture-screen",
    "crates/alvum-capture-sck",
    "crates/alvum-processor-audio",
    "crates/alvum-knowledge",
    "crates/alvum-processor-screen",
    "crates/alvum-connector-screen",
    "crates/alvum-connector-external",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
clap = { version = "4", features = ["derive"] }
axum = "0.8"
