[package]
name = "alvum-capture-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.17"
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
silero-vad-rust = "6.2"
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic", "ndarray", "download-binaries"] }
opus = "0.3"

[dev-dependencies]
tempfile = "3"
