[package]
name = "alvum-capture-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
alvum-core = { path = "../alvum-core" }
async-trait = "0.1"
cpal = "0.17"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-media = { version = "0.3", features = ["CMSampleBuffer", "CMFormatDescription", "CMBlockBuffer"] }
objc2-screen-capture-kit = "0.3"
block2 = "0.6"
dispatch2 = { version = "0.3", features = ["alloc", "objc2"] }
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
