[package]
name = "alvum-capture-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
alvum-core = { path = "../alvum-core" }
async-trait = "0.1"
cpal = "0.17"
alvum-capture-sck = { path = "../alvum-capture-sck" }
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
toml = "0.8"
objc2-core-foundation = "0.3"

[dev-dependencies]
tempfile = "3"
