[package]
name = "alvum-capture-screen"
version = "0.1.0"
edition = "2024"

[dependencies]
alvum-core = { path = "../alvum-core" }
image = { version = "0.25", default-features = false, features = ["png"] }
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-media = { version = "0.3", features = ["CMSampleBuffer"] }
objc2-core-video = { version = "0.3", features = ["CVPixelBuffer", "CVBuffer", "CVImageBuffer"] }
objc2-screen-capture-kit = "0.3"
block2 = "0.6"
dispatch2 = { version = "0.3", features = ["alloc", "objc2"] }
async-trait = "0.1"
toml = "0.8"
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
