[package]
name = "alvum-capture-screen"
version = "0.1.0"
edition = "2024"

[dependencies]
alvum-core = { path = "../alvum-core" }
image = { version = "0.25", default-features = false, features = ["png"] }
core-graphics = "0.24"
core-foundation = "0.10"
alvum-capture-sck = { path = "../alvum-capture-sck" }
async-trait = "0.1"
toml = "0.8"
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
