[package]
name = "alvum-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "alvum"
path = "src/main.rs"

[dependencies]
alvum-core = { path = "../alvum-core" }
alvum-capture-audio = { path = "../alvum-capture-audio" }
alvum-connector-claude = { path = "../alvum-connector-claude" }
alvum-pipeline = { path = "../alvum-pipeline" }
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
