[package]
name = "alvum-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "alvum"
path = "src/main.rs"

[dependencies]
alvum-core = { path = "../alvum-core" }
alvum-capture-audio = { path = "../alvum-capture-audio" }
alvum-connector-audio = { path = "../alvum-connector-audio" }
alvum-connector-claude = { path = "../alvum-connector-claude" }
alvum-connector-codex = { path = "../alvum-connector-codex" }
alvum-connector-screen = { path = "../alvum-connector-screen" }
alvum-pipeline = { path = "../alvum-pipeline" }
alvum-processor-audio = { path = "../alvum-processor-audio" }
alvum-knowledge = { path = "../alvum-knowledge" }
alvum-capture-screen = { path = "../alvum-capture-screen" }
alvum-processor-screen = { path = "../alvum-processor-screen" }
serde_json.workspace = true
anyhow.workspace = true
toml = "0.8"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
dirs = "6"
serde = { workspace = true, features = ["derive"] }
