[package]
name = "alvum-connector-claude"
version = "0.1.0"
edition = "2024"

[dependencies]
alvum-core = { path = "../alvum-core" }
alvum-connector-session = { path = "../alvum-connector-session" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
toml = "0.8"
dirs = "6"

[dev-dependencies]
tempfile = "3"
