[package]
name = "alvum-connector-codex"
version = "0.1.0"
edition = "2024"

[dependencies]
alvum-core = { path = "../alvum-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait = "0.1"
toml = "0.8"
walkdir = "2"
dirs = "6"

[dev-dependencies]
tempfile = "3"
