[package]
name = "alvum-connector-external"
version = "0.1.0"
edition = "2024"

[dependencies]
alvum-core = { path = "../alvum-core" }
alvum-knowledge = { path = "../alvum-knowledge" }
anyhow.workspace = true
async-trait = "0.1"
axum.workspace = true
chrono.workspace = true
dirs = "6"
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
toml = "0.8"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
