[package]
name = "alvum-episode"
version = "0.1.0"
edition = "2024"

[dependencies]
alvum-core = { path = "../alvum-core" }
alvum-knowledge = { path = "../alvum-knowledge" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
# Tests for `call_and_parse_with_retry` need an `LlmProvider` impl. The
# trait is `#[async_trait]`, so the impl macro and a tokio runtime are
# both required at test time. Production code does not depend on either.
async-trait = "0.1"
tokio = { workspace = true }
