[package]
name = "alvum-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
alvum-core = { path = "../alvum-core" }
alvum-episode = { path = "../alvum-episode" }
alvum-knowledge = { path = "../alvum-knowledge" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
async-trait = "0.1"
base64 = "0.22"
dirs = "6"

# Bedrock provider deps. aws-config resolves credentials via the standard
# AWS chain (env, ~/.aws/credentials, IMDS, SSO); aws-sdk-bedrockruntime
# is the modern Converse API for invoking Anthropic-on-Bedrock models.
aws-config = { version = "1", default-features = false, features = ["rt-tokio", "behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = ["rt-tokio", "behavior-version-latest"] }

[dev-dependencies]
tempfile = "3"
