[package]
name = "alvum-processor-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
alvum-core = { path = "../alvum-core" }
whisper-rs = "0.16"
silero-vad-rust = "6.2"
ort = { version = "=2.0.0-rc.10", features = ["ndarray", "download-binaries"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
