[package]
name = "alvum-processor-screen"
version = "0.1.0"
edition = "2024"

[dependencies]
alvum-core = { path = "../alvum-core" }
alvum-pipeline = { path = "../alvum-pipeline" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true

# macOS Vision-framework OCR (replaces osascript shellout).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSURL", "NSDictionary", "NSArray", "NSString"] }
objc2-vision = { version = "0.3", features = ["VNRequest", "VNRecognizeTextRequest", "VNObservation", "VNRequestHandler"] }
objc2-app-kit = { version = "0.3", features = ["NSImage"] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-core-graphics = "0.3"

[dev-dependencies]
tempfile = "3"
